--- a/env.yml
+++ b/env.yml
@@ -27,9 +27,11 @@ dependencies:
   - zlib=1.2.13=h5eee18b_1
   - pip:
       - annotated-types==0.7.0
+      - anyio==4.4.0
       - cachetools==5.3.3
       - certifi==2024.7.4
       - charset-normalizer==3.3.2
+      - distro==1.9.0
       - google-ai-generativelanguage==0.6.6
       - google-api-core==2.19.1
       - google-api-python-client==2.137.0
@@ -39,8 +41,12 @@ dependencies:
       - googleapis-common-protos==1.63.2
       - grpcio==1.64.1
       - grpcio-status==1.62.2
+      - h11==0.14.0
+      - httpcore==1.0.5
       - httplib2==0.22.0
+      - httpx==0.27.0
       - idna==3.7
+      - openai==1.35.14
       - proto-plus==1.24.0
       - protobuf==4.25.3
       - pyasn1==0.6.0
@@ -50,6 +56,7 @@ dependencies:
       - pyparsing==3.1.2
       - requests==2.32.3
       - rsa==4.9
+      - sniffio==1.3.1
       - tqdm==4.66.4
       - typing-extensions==4.12.2
       - uritemplate==4.1.1
